# aws-orchestrator

./: .gitignore  AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg
aws_orchestrator/: deploy.py  destroy.py  list.py  orchestrator.py  wait.py
tests/: build.sh  simple.yaml  test-environment.yaml
