[metadata]
name             = aws_orchestrator
version          = 0.1.0
summary          = UNOFFICIAL Orchestrator for AWS
description-file = README.md
author           = Horst Dumcke
home-page        = https://github.com/hdumcke

[files]
packages         = aws_orchestrator

[global]
setup-hooks      = pbr.hooks.setup_hook

[options]
include_package_data = False

[entry_points]
console_scripts =
    aws-deploy = aws_orchestrator.deploy:main
    aws-destroy = aws_orchestrator.destroy:main
    aws-list = aws_orchestrator.list:main

[wheel]
universal       = 1
